// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieInfoButtons MovieInfoButtons -> Click (show info)  1`] = `
<div
  className="bottom_right"
>
  <div
    className="active bottom_right_text_descr"
  >
    <p
      className="bottom_right_text_descr_p"
    >
      There are growing dangers in the wizarding world og 1926 New York. Something mysterious is leaving a path of destruction in the streets, threatening to expose the wizarding
    </p>
  </div>
  <div
    className="active bottom_right_buttons_box"
  >
    <button
      className="bottom_right_buttons_box_button_watch bottom_right_buttons_box_button"
    >
      Watch Now
    </button>
    <button
      className="bottom_right_buttons_box_button_view bottom_right_buttons_box_button"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
</div>
`;

exports[`MovieInfoButtons renders correctly 1`] = `
<div
  className="bottom_right"
>
  <div
    className=" bottom_right_text_descr"
  >
    <p
      className="bottom_right_text_descr_p"
    />
  </div>
  <div
    className=" bottom_right_buttons_box"
  >
    <button
      className="bottom_right_buttons_box_button_watch bottom_right_buttons_box_button"
    >
      Watch Now
    </button>
    <button
      className="bottom_right_buttons_box_button_view bottom_right_buttons_box_button"
      onClick={[Function]}
    >
      View Info
    </button>
  </div>
</div>
`;
